tests/snapshots/trace_solver__spanshot_request@3748112089018568567.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: false
    eat_inherited_ref_alone: true
    downgrade_mut_inside_shared: false
    rules_display_style: Plain
  bundle_name: stateless
  request: "&[[&mut x]]: &[&mut [T]]"
---
&[[&mut x]] @ p: &[&mut [T]]
// Applying rule `Deref(EatOuter)`
[[&mut x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&mut x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&mut x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref(EatOuter)`
x @ *&mut (*(*p).0).0: T
// Applying rule `Binding`
let x: T = *&mut (*(*p).0).0

// Final bindings (simplified):
let x: T = *&mut (*(*p).0).0; // Borrow-check error: MutBorrowBehindSharedBorrow
